# Static-DI

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  MODULE.bazel  README.md  build_tests.bash  conanfile.txt  conanprofile.txt  test.bash  tests.cmake
benchmarks/compilation/9/: CMakeLists.txt  graph.ixx.dig  main.cpp
benchmarks/compilation/9/nodes/: node1.impl.ixx  node1.ixx  node2.impl.ixx  node2.ixx  node3.impl.ixx  node3.ixx  node4.impl.ixx  node4.ixx  node5.impl.ixx  node5.ixx  node6.impl.ixx  node6.ixx  node7.impl.ixx  node7.ixx  node8.impl.ixx  node8.ixx  node9.impl.ixx  node9.ixx
benchmarks/compilation/9/traits/: trait1.ixx.dig  trait2.ixx.dig  trait3.ixx.dig  trait4.ixx.dig  trait5.ixx.dig  trait6.ixx.dig  trait7.ixx.dig  trait8.ixx.dig  trait9.ixx.dig
benchmarks/compilation/99/: CMakeLists.txt  graph.ixx.dig  main.cpp
benchmarks/compilation/99/nodes/: node1.impl.ixx  node1.ixx  node10.impl.ixx  node10.ixx  node11.impl.ixx  node11.ixx  node12.impl.ixx  node12.ixx  node13.impl.ixx  node13.ixx  node14.impl.ixx  node14.ixx  node15.impl.ixx  node15.ixx  node16.impl.ixx  node16.ixx  node17.impl.ixx  node17.ixx  node18.impl.ixx  node18.ixx  node19.impl.ixx  node19.ixx  node2.impl.ixx  node2.ixx  node20.impl.ixx  node20.ixx  node21.impl.ixx  node21.ixx  node22.impl.ixx  node22.ixx  node23.impl.ixx  node23.ixx  node24.impl.ixx  node24.ixx  node25.impl.ixx  node25.ixx  node26.impl.ixx  node26.ixx  node27.impl.ixx  node27.ixx  (+158 more)
benchmarks/compilation/99/traits/: trait1.ixx.dig  trait10.ixx.dig  trait11.ixx.dig  trait12.ixx.dig  trait13.ixx.dig  trait14.ixx.dig  trait15.ixx.dig  trait16.ixx.dig  trait17.ixx.dig  trait18.ixx.dig  trait19.ixx.dig  trait2.ixx.dig  trait20.ixx.dig  trait21.ixx.dig  trait22.ixx.dig  trait23.ixx.dig  trait24.ixx.dig  trait25.ixx.dig  trait26.ixx.dig  trait27.ixx.dig  trait28.ixx.dig  trait29.ixx.dig  trait3.ixx.dig  trait30.ixx.dig  trait31.ixx.dig  trait32.ixx.dig  trait33.ixx.dig  trait34.ixx.dig  trait35.ixx.dig  trait36.ixx.dig  trait37.ixx.dig  trait38.ixx.dig  trait39.ixx.dig  trait4.ixx.dig  trait40.ixx.dig  trait41.ixx.dig  trait42.ixx.dig  trait43.ixx.dig  trait44.ixx.dig  trait45.ixx.dig  (+59 more)
benchmarks/compilation/99_seq/: CMakeLists.txt  graph.ixx.dig  main.cpp
benchmarks/compilation/99_seq/nodes/: node1.ixx  node10.ixx  node11.ixx  node12.ixx  node13.ixx  node14.ixx  node15.ixx  node16.ixx  node17.ixx  node18.ixx  node19.ixx  node2.ixx  node20.ixx  node21.ixx  node22.ixx  node23.ixx  node24.ixx  node25.ixx  node26.ixx  node27.ixx  node28.ixx  node29.ixx  node3.ixx  node30.ixx  node31.ixx  node32.ixx  node33.ixx  node34.ixx  node35.ixx  node36.ixx  node37.ixx  node38.ixx  node39.ixx  node4.ixx  node40.ixx  node41.ixx  node42.ixx  node43.ixx  node44.ixx  node45.ixx  (+59 more)
benchmarks/compilation/99_seq/traits/: trait1.ixx.dig  trait10.ixx.dig  trait11.ixx.dig  trait12.ixx.dig  trait13.ixx.dig  trait14.ixx.dig  trait15.ixx.dig  trait16.ixx.dig  trait17.ixx.dig  trait18.ixx.dig  trait19.ixx.dig  trait2.ixx.dig  trait20.ixx.dig  trait21.ixx.dig  trait22.ixx.dig  trait23.ixx.dig  trait24.ixx.dig  trait25.ixx.dig  trait26.ixx.dig  trait27.ixx.dig  trait28.ixx.dig  trait29.ixx.dig  trait3.ixx.dig  trait30.ixx.dig  trait31.ixx.dig  trait32.ixx.dig  trait33.ixx.dig  trait34.ixx.dig  trait35.ixx.dig  trait36.ixx.dig  trait37.ixx.dig  trait38.ixx.dig  trait39.ixx.dig  trait4.ixx.dig  trait40.ixx.dig  trait41.ixx.dig  trait42.ixx.dig  trait43.ixx.dig  trait44.ixx.dig  trait45.ixx.dig  (+59 more)
di/lib/: CMakeLists.txt
di/lib/include/di/: context.hpp  graph.hpp  key.hpp  map_info.hpp  node.hpp  node_fwd.hpp  repeater.hpp  test.hpp  trait.hpp  union.hpp
di/lib/include/di/detail/: compress.hpp  concepts.hpp  finalize.hpp
di/lib/include/di/manual/: cluster.hpp
generator_lib/: CMakeLists.txt  dig.lark  dig_header.lark  dig_module.lark  generate.py  requirements.txt  template.hxx.jinja  template.ixx.jinja  template.jinja
lib/: BUILD  CMakeLists.txt
lib/include/di/: adapt.hpp  alias.hpp  args.hpp  box.hpp  cluster.hpp  collection.hpp  combine.hpp  compiler.hpp  context.hpp  context_fwd.hpp  core.hpp  count.hpp  defer.hpp  depends.hpp  detached.hpp  di.hpp  empty_types.hpp  ensure.hpp  environment.hpp  factory.hpp  finalise.hpp  finalize.hpp  function.hpp  global_context.hpp  global_graph.hpp  global_trait.hpp  graph.hpp  key.hpp  lazy.hpp  link.hpp  map_info.hpp  mock.hpp  mock_fwd.hpp  narrow.hpp  no_trait.hpp  node.hpp  node_fwd.hpp  peer.hxx.dig  peer_node.hpp  proxy.hpp  (+14 more)
lib/include/di/detail/: as_ref.hpp  cast.hpp  compress.hpp  concepts.hpp  select.hpp  type_at.hpp  type_name.hpp  with_index.hpp
lib/include/di/manual/: cluster.hpp  trait.hpp
lib/include/di/traits/: dynamic_node.hpp  dynamic_node.hxx.dig  scheduler.hpp  scheduler.hxx.dig
lib/macros/include/di/: macros.hpp
lib/modules/: di.ixx
lib/pch/: CMakeLists.txt
tests/: CMakeLists.txt  config.cmake  test_abc_headers.cpp  test_abc_module.cpp  test_charlie.cpp  test_collection.cpp  test_combine.cpp  test_embedded_headers.cpp  test_embedded_modules.cpp  test_global.cpp  test_lazy.cpp  test_mem_ptr.cpp  test_mock.cpp  test_node_count.cpp  test_null_trait.cpp  test_union.cpp  test_virtual.cpp
tests/abc/: CMakeLists.txt
tests/abc/headers/include/abc/: alice.hpp  alice.tpp  bob.hpp  bob.tpp  charlie.hpp  charlie.tpp  ellie.hpp  graph.hxx.dig  graph_wrapper.hpp  (+1 more)
tests/abc/headers/src/: alice.cpp  ellie.cpp
tests/abc/include/abc/: alice.hpp  alice.tpp  charlie.hpp  charlie.tpp  graph.hxx.dig  traits.hpp
tests/abc/modules/: CMakeLists.txt
tests/abc/modules/abc/: alice.cpp  alice.impl.ixx  alice.ixx  bob.ixx  charlie.ixx  ellie.cpp  ellie.ixx  graph.ixx  traits.ixx.dig
tests/repeater/: CMakeLists.txt  main.cpp  traits.ixx.dig
tests/test_domain/: domain.ixx.dig
tests/test_repeater/: cluster.ixx.dig  main.cpp  test_node.ixx
tests/test_thread/: cluster.ixx.dig  global_scheduler.ixx  main.cpp  poster.cpp  poster.ixx  test_collection.cpp  test_node.ixx  test_thread.cpp  test_union.cpp
tests/thread/: CMakeLists.txt  cluster.ixx.dig  main.cpp  poster.ixx  test_node.ixx  traits.ixx.dig
(+21 files in other folders)
